feat(open-api): Regenerated open api
